# mg-favoritos

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
mg_favoritos/: app.py  database.py  models.py  security.py  settings.py
mg_favoritos/routes/: auth.py  clients.py  customer.py  favorites.py
mg_favoritos/schemas/: client.py  customer.py  favorites.py  products.py
mg_favoritos/services/: products.py
migrations/: env.py
migrations/versions/: 798ac9e4d7bd_create_clients_table.py  8c8b88f40225_create_favorites_table.py  d5fd4e7ef5a3_create_tables.py
tests/: conftest.py  test_routes_auth.py  test_routes_customers.py  test_routes_favorites.py  test_services_products.py
